# tortoise-orm-trace-unused-fields

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
tortoise_trace_unused/: __init__.py
